# instagram-to-discord

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
src/instagram_to_discord/: __init__.py
utils/: fetch_posts.bat  fetch_posts.sh
