[metadata]
description-file=README.md
license_files=LICENSE
name = instagram-to-discord
version = 0.1.2
author = jd-apprentice
author_email = contacto@jonathan.com.ar
description = Integrate instagram to discord
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jd-apprentice/instagram-to-discord
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src